fixed css names and spacing for edit comment

--- a/client/src/components/Comments/comments.css
+++ b/client/src/components/Comments/comments.css
@@ -23,8 +23,21 @@
     background-color: #15cdfc;
 }
 
-#singleBuildEditComment {
+#commentPost {
+    border-bottom: 1px solid #15cdfc;
+    padding-bottom: 10px;
+    margin: 0px;
+    color: #fff;
     width: 100%;
+}
+
+#editCommentPost {
+    border-radius: 3px;
+    padding: 5px;
+    margin: 0;
+    width: 100%;
+    outline: none;
+    border: none;
 }
 
 #editCommentIcon, #deleteCommentIcon, #saveComment {
